<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/string_home"
        app:iconTint="@color/white"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/hourlyFragment"
        android:icon="@drawable/ic_clock"
        android:title="@string/string_hourly"
        app:iconTint="@color/white"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/dailyFragment"
        android:icon="@drawable/ic_calendar"
        android:title="@string/string_daily"
        app:iconTint="@color/white"
        app:showAsAction="ifRoom" />
</menu>