<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="item"
            type="com.example.todayweather.data.model.DetailHomeModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/corner_layout"
        android:padding="5dp">

        <ImageView
            android:id="@+id/imgView_ic_home_detail"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/todo"
            android:padding="10dp"
            app:layout_constraintBottom_toTopOf="@+id/tv_title_home_detail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white"
            tools:src="@drawable/ic_temperature" />

        <TextView
            android:id="@+id/tv_title_home_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            app:layout_constraintBottom_toTopOf="@+id/tv_res_home_detail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgView_ic_home_detail"
            app:setStatus="@{item.description}"
            tools:text="@string/feels_like_string" />

        <TextView
            android:id="@+id/tv_res_home_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_home_detail"
            app:setStatus="@{item.result}"
            tools:text="@string/home_temp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>