<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="current"
            type="com.example.todayweather.data.model.Current" />

        <variable
            name="item"
            type="com.example.todayweather.data.model.Daily" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:theme="@style/Theme.TodayWeather">

        <ProgressBar
            android:id="@+id/progress_loading"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/corner_layout_loading"
            android:elevation="4dp"
            android:indeterminateTint="@color/white"
            android:padding="14dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_current_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="RtlSymmetry"
                tools:text="16:45" />

            <ImageButton
                android:id="@+id/imageButton_search"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/corner_layout_icon"
                android:contentDescription="@string/todo"
                android:padding="15dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_search"
                app:layout_constraintBottom_toBottomOf="@+id/imageButton_setting"
                app:layout_constraintEnd_toStartOf="@+id/imageButton_setting"
                app:layout_constraintTop_toTopOf="@+id/imageButton_setting"
                app:tint="@color/white"
                tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

            <ImageButton
                android:id="@+id/imageButton_setting"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/corner_layout_icon"
                android:contentDescription="@string/todo"
                android:padding="15dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_settings"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/white"
                tools:ignore="TouchTargetSizeCheck" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nested_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/black"
            android:fillViewport="true"
            android:overScrollMode="never"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraint_header"
            tools:context=".ui.home.HomeFragment">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="18dp"
                android:paddingEnd="15dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraint_status_network"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/corner_home_element"
                    android:elevation="4dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="RtlSymmetry">

                    <LinearLayout
                        android:id="@+id/ln_status_network"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="5dp"
                        android:background="@drawable/border_status_network"
                        android:orientation="vertical"
                        android:paddingHorizontal="15dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:id="@+id/textView_status_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/string_mode_offline"
                            android:textColor="@color/black"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/textView_status"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/string_mode_offline_status"
                            android:textColor="@color/black"
                            android:textSize="13sp" />
                    </LinearLayout>

                    <ImageButton
                        android:id="@+id/imageBtn_refresh"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginStart="2dp"
                        android:background="@drawable/custom_status_network"
                        android:contentDescription="@string/todo"
                        android:padding="12dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_refresh"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/ln_status_network"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_bg3"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:shapeAppearanceOverlay="@style/CornerRadiusImage"
                    tools:ignore="ImageContrastCheck" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout_temp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView">

                    <TextView
                        android:id="@+id/tv_home_celcius"
                        style="@style/txt_title_white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="55sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:setTemp="@{current.temp}"
                        tools:text="@string/home_temp" />

                    <TextView
                        android:id="@+id/tv_home_celcius_max"
                        style="@style/txt_celcius_min_max"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="17dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/tv_home_celcius"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0"
                        app:setTemp="@{item.temp.max}"
                        tools:text="32°C" />

                    <TextView
                        android:id="@+id/tv_home_celcius_slash"
                        style="@style/txt_celcius_min_max"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/home_temp_slash"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/tv_home_celcius_max"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_home_celcius_min"
                        style="@style/txt_celcius_min_max"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="33dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/tv_home_celcius_slash"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0"
                        app:setTemp="@{item.temp.min}"
                        tools:text="@string/home_temp_min" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/tv_home_date"
                    style="@style/txt_grey"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout_temp"
                    app:setDate="@{item.dt}"
                    tools:text="@string/home_date" />

                <TextView
                    android:id="@+id/tv_home_location"
                    style="@style/txt_title_white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="3dp"
                    android:textSize="17sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_home_date"
                    tools:text="@string/home_location" />

                <TextView
                    android:id="@+id/tv_home_status"
                    style="@style/txt_title_white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_home_location"
                    app:setHomeStatusAbove="@{item}"
                    tools:text="@string/home_status" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/home_status_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_home_status">

                    <TextView
                        android:id="@+id/tv_home_status_description"
                        style="@style/txt_grey"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toStartOf="@+id/imgView_home_nav"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:setHomeStatusBelow="@{item}"
                        tools:text="@string/home_status_description" />

                    <ImageView
                        android:id="@+id/imgView_home_nav"
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:src="@drawable/ic_play"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toEndOf="@+id/tv_home_status_description"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.515"
                        app:tint="#888888"
                        tools:ignore="ContentDescription" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <include
                    android:id="@+id/recyclerView_detail_container_element"
                    layout="@layout/rcv_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:layout_constraintTop_toBottomOf="@+id/home_status_description" />

                <include
                    android:id="@+id/recyclerView_hourly_container_element"
                    layout="@layout/rcv_hourly"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:layout_constraintTop_toBottomOf="@id/recyclerView_detail_container_element" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>